# n8n-launcher

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_ES.md  README_PT_BR.md  biome.json  docker-compose.yaml  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release-cross-platform.yml  release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: DockerInstallGuide.tsx  LogsCard.tsx  N8NLauncher.tsx  StateController.tsx  StatusIndicator.tsx
src/components/ui/: button.tsx  collapsible.tsx
src/hooks/: useDockerStatus.ts
src/pages/: Index.tsx
