[package]
name = "n8n-launcher"
version = "0.1.4"
description = "A cross-platform desktop application to easily start your local N8N instance"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-opener = "2.4.0"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is a URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
